Make min-width for actor sheet 850px to prevent html element overlap

--- a/fantasycraft.css
+++ b/fantasycraft.css
@@ -1,5 +1,5 @@
 .fantasycraft.sheet.actor {
-  min-width: 765px;
+  min-width: 850px;
   min-height: 715px;
 }
 .fantasycraft.sheet.actor ul.attributes {
